# MCPTeachingAidSystem

./: .gitignore  LICENSE  README.md  apply_migrations.py  package-lock.json  package.json  pyproject.toml  requirements.txt  run_server.py  tailwind.config.js  vite.config.js
.VSCodeCounter/2025-05-05_08-39-21/: diff.txt  results.csv  results.json  results.txt
ai_tutor_backend/: manage.py
ai_tutor_backend/ai_teaching_aid/: asgi.py  settings.py  urls.py  wsgi.py
ai_tutor_backend/checkin/: models.py  serializers.py  urls.py  views.py
ai_tutor_backend/mcp/: local_web_server.py  main.py  mcp_server_controller.py  question_generator.py  test_agent_connection.py
ai_tutor_backend/problem_generator/: english_question_genertor.py  physics_question_generator.py
ai_tutor_backend/problems/: __init__.py  admin.py  apps.py  models.py  serializers.py  urls.py  views.py
ai_tutor_backend/students/: models.py  serializers.py  urls.py  views.py
ai_tutor_backend/users/: __init__.py  admin.py  apps.py  check_in.py  models.py  serializers.py  urls.py  views.py
mcp/: english_question_genertor.py  main.py  math_question_generator.py  mcp_server_controller.py  question_import.py
mcp/mcp_servers/: filesystem-server.py  local_web_server.py  mysql_server.py  pdf_server.py
src/: App.vue  main.js  server.py
src/agents/: teacher.py
src/assets/: main.css
src/component/: CheckIn.vue  CheckInDetails.vue  ClassWork.vue  Dialogue.vue  Index.vue  Information.vue  Login.vue  PracticeProblem.vue  StudentCheckIn.vue  StudentManagement.vue  Welcome.vue  WrongBook.vue
src/mcp/: .env  (+11 more)
(+33 files in other folders)
